corpo remodelado com flexbox

--- a/pgs/requisitos-programacao.html
+++ b/pgs/requisitos-programacao.html
@@ -7,30 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/font/all.css">
-
+    <link rel="shortcut icon" type="imagex/png" href="/img/logo.png">
+    
     <title>GG Learning</title>
+
 </head>
 
 <body>
     <!--HEADER-->
     <header>
-        <div class="container">
-
-            <div class="logo left">
-                <a href="index.html">
-                    <img src="/img/logo.png" alt="" height="100px">
-                </a>
-            </div>
-            <div class="menu right">
-                <ul>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Contato</a></li>
-                    <li class="not"><input type="text" name="" placeholder="Pesquise..."><i class="fa fa-search"></i>
-                    </li>
-                </ul>
-            </div>
-            <div class="clear"></div>
+        <div class="logo">
+            <a href="../index.html">
+                <img src="/img/logo.png" alt="" height="100px">
+            </a>
         </div>
+
+        <nav>
+            <ul>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
+                <li class="not"><input type="text" name="" placeholder="Pesquise..."><i class="fa fa-search"></i>
+                </li>
+            </ul>
+        </nav>
     </header>
     <!-- BOX CAPTURA -->
     <section class="box-captura">
@@ -57,7 +56,7 @@
         </div>
 
         <div class="sidebar right">
-            <h2>eae</h2>
+            <h2>test</h2>
         </div>
 
         <div class="clear"></div>
@@ -69,7 +68,7 @@
         <div class="wrapper">
             <div class="footer-box">
                 <div class="company-footer">
-                    <img src="img/logo.png" width="250px">
+                    <img src="../img/logo.png" width="250px">
 
                     <p>A maneira mais fácil de aprender a programar.</p>
                 </div>
