rodape atualizado para css grid

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                 <img src="img/blog2.jpg">
                 <h4><a href="/ide/ui/ide.html">Qual a melhor linguagem de programação para iniciantes?</a></h4>
                 <p class="article-date">05 de Fevereiro de 2019 | 10 comentários</p>
-                <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua.</p>
+                <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a href="/ide/ui/ide.html" class="article-btn light-btn">Ler post</a>
             </div>
 
@@ -41,24 +40,21 @@
                 <img src="img/blog3.jpg">
                 <h4><a href="#">Article title</a></h4>
                 <p class="article-date">05 de Fevereiro de 2019 | 10 comentários</p>
-                <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua.</p>
+                <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a href="#" class="article-btn light-btn">Ler post</a>
             </div>
             <div class="article-box">
                 <img src="img/blog3.jpg">
                 <h4><a href="#">Article title</a></h4>
                 <p class="article-date">05 de Fevereiro de 2019 | 10 comentários</p>
-                <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua.</p>
+                <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a href="#" class="article-btn light-btn">Ler post</a>
             </div>
             <div class="article-box">
                 <img src="img/blog3.jpg">
                 <h4><a href="#">Article title</a></h4>
                 <p class="article-date">05 de Fevereiro de 2019 | 10 comentários</p>
-                <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua.</p>
+                <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a href="#" class="article-btn light-btn">Ler post</a>
             </div>
         </section>
@@ -135,20 +131,18 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <div class="wrapper">
-                <h2>Autores</h2>
-                <ul>
-                    <li>
-                        <span>Matheus Henrique Tirabassi</span>
-                    </li>
-                    <li>
-                        <span>Erick Mayson Cardoso Ferreira</span>
-                    </li>
-                    <li>
-                        <span>Luis Henrique Dall Oglio dos Santos</span>
-                    </li>
-                </ul>
-            </div>
+            <h2>Autores</h2>
+            <ul>
+                <li>
+                    <span>Matheus Henrique Tirabassi</span>
+                </li>
+                <li>
+                    <span>Erick Mayson Cardoso Ferreira</span>
+                </li>
+                <li>
+                    <span>Luis Henrique Dall Oglio dos Santos</span>
+                </li>
+            </ul>
         </div>
     </footer>
     <nav class="tag">NAVEGAÇÃO</nav>
