pagina de requisitos de programaçao completa

--- a/sobre.html
+++ b/sobre.html
@@ -47,13 +47,13 @@
                 <div class="text">
                     Umas das principais barreiras no quesito programação é o quão assustador e desafiador o conteúdo
                     pode
-                    parecer para muitas pessoas. Porém, como qualquer outro assunto, programação tem base e normalmente
+                    parecer para muitas pessoas. Porém, como qualquer outro assunto, a programação tem base e normalmente
                     ela vai
                     se construindo a partir de conceitos e prática. </div>
                     <div class="text">
                         Assim procuramos promover e abordar em nosso site esses componentes afins de adquirir um
                         aprendizado
-                        completo de programação.
+                        completo.
                     </div>
                 </div>
 
