Estrutura de textos do site completa

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <section id="blog-container" class="posts">
             <div class="article-box">
-                <img src="img/blog1.jpg">
+                <img src="img/blog1.jpg" height="200px">
                 <h4><a href="/pgs/requisitos-programacao.html">Quais são os pré-requisitos para começar a
                         programar?</a></h4>
                 <p class="article-date">14 de Outubro de 2021 | 10 comentários</p>
@@ -29,11 +29,11 @@
             </div>
 
             <div class="article-box">
-                <img src="img/blog2.jpg">
-                <h4><a href="/ide/ui/ide.html">Quais tipos de linguagem de programação existem e quais são as suas diferenças?</a></h4>
-                <p class="article-date">05 de Fevereiro de 2019 | 10 comentários</p>
+                <img src="/img/blog2.png" height="200px">
+                <h4><a href="/pgs/tipos-de-linguagem-de-programacao.html">Quais tipos de linguagem de programação existem e quais são as suas diferenças?</a></h4>
+                <p class="article-date">14 de Outubro de 2021 | 8 comentários</p>
                 <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <a href="/ide/ui/ide.html" class="article-btn light-btn">Ler post</a>
+                <a href="/pgs/tipos-de-linguagem-de-programacao.html" class="article-btn light-btn">Ler post</a>
             </div>
 
         </section>
