--- a/pgs/requisitos-programacao.html
+++ b/pgs/requisitos-programacao.html
@@ -16,22 +16,7 @@
 
 <body>
 
-    <header>
-        <div class="logo">
-            <a href="../index.html">
-                <img src="/img/logo.png" alt="" height="100px">
-            </a>
-        </div>
 
-        <nav>
-            <ul>
-                <li><a href="../sobre.html">Sobre</a></li>
-                <li><a href="../contato.html">Contato</a></li>
-                <li class="not"><input type="text" name="" placeholder="Pesquise..."><i class="fa fa-search"></i>
-                </li>
-            </ul>
-        </nav>
-    </header>
 
     <main>
         <div class="content">
@@ -105,7 +90,7 @@
                     dos iniciantes aos experientes do mercado. O único requisito para usar bem o site é ter um certo nível de fluência em Inglês
                 </div>
                 <div class="referencias">
-                    <h2>Referências</h2>
+                    <h2 class="subtitulo">Referências</h2>
                     <ul>
                         <li>AMBIENTE de desenvolvimento integrado. <b>Wikipedia</b> , 2021. Disponivel em: &lt<a href="https://pt.wikipedia.org/wiki/Ambiente_de_desenvolvimento_integrado">https://pt.wikipedia.org/wiki/Ambiente_de_desenvolvimento_integrado</a>&gt.
                             Acesso em: 17 out. 2021. </li>
@@ -120,7 +105,22 @@
             </div>
         </div>
     </main>
+    <header>
+        <div class="logo">
+            <a href="../index.html">
+                <img src="/img/logo.png" alt="" height="100px">
+            </a>
+        </div>
 
+        <nav>
+            <ul>
+                <li><a href="../sobre.html">Sobre</a></li>
+                <li><a href="../contato.html">Contato</a></li>
+                <li class="not"><input type="text" name="" placeholder="Pesquise..."><i class="fa fa-search"></i>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <footer>
         <div class="wrapper">
