formatacao da pagina melhorada

--- a/contato.html
+++ b/contato.html
@@ -39,7 +39,7 @@
         </div>
 
         <nav>
-            <ul>
+            <ul class="painel-navegacao">
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li class="not"><input type="text" name="" placeholder="Pesquise..."><i class="fa fa-search"></i>
