--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 
             <div class="article-box">
                 <img src="/img/blog2.png" height="200px">
-                <h4><a href="/pgs/tipos-de-linguagem-de-programacao.html">Quais tipos de linguagem de programação existem e quais são as suas diferenças?</a></h4>
+                <h4><a href="/pgs/tipos-de-linguagem-de-programacao.html">Quais tipos de linguagem de programação
+                        existem e quais são as suas diferenças?</a></h4>
                 <p class="article-date">14 de Outubro de 2021 | 8 comentários</p>
-                <p class="article-resume">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="article-resume">Existem diferentes paradigmas de programação e cada um desses diferem muito na
+                    forma de programar.</p>
                 <a href="/pgs/tipos-de-linguagem-de-programacao.html" class="article-btn light-btn">Ler post</a>
             </div>
 
@@ -49,7 +51,7 @@
         </div>
 
         <nav>
-            <ul>
+            <ul class="painel-navegacao">
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li class="not"><input type="text" name="" placeholder="Pesquise..."><i class="fa fa-search"></i>
@@ -76,7 +78,8 @@
                             <span class="article-date">14 de outubro de 2021</span>
                         </li>
                         <li>
-                            <a href="/pgs/tipos-de-linguagem-de-programacao.html">Quais tipos de linguagem de programação existem e quais são as suas diferenças?</a>
+                            <a href="/pgs/tipos-de-linguagem-de-programacao.html">Quais tipos de linguagem de
+                                programação existem e quais são as suas diferenças?</a>
                             <span class="article-date">14 de outubro de 2021</span>
                         </li>
                     </ul>
@@ -121,7 +124,13 @@
             </ul>
         </div>
     </footer>
-    <nav class="tag">NAVEGAÇÃO</nav>
+    <nav class="tag">
+        <h1>NAVEGAÇÃO</h1>
+        <ul>
+            <li>IDE ONLINE</li>
+        </ul>
+
+    </nav>
 
 
 </body>
