--- a/pgs/template.html
+++ b/pgs/template.html
@@ -30,15 +30,15 @@
     </main>
     <header>
         <div class="logo">
-            <a href="../index.html">
+            <a href="index.html">
                 <img src="/img/logo.png" alt="" height="100px">
             </a>
         </div>
 
         <nav>
-            <ul>
-                <li><a href="../sobre.html">Sobre</a></li>
-                <li><a href="../contato.html">Contato</a></li>
+            <ul class="painel-navegacao">
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
                 <li class="not"><input type="text" name="" placeholder="Pesquise..."><i class="fa fa-search"></i>
                 </li>
             </ul>
