--- a/pgs/tipos-de-linguagem-de-programacao.html
+++ b/pgs/tipos-de-linguagem-de-programacao.html
@@ -178,6 +178,19 @@
                             MELLO, G.  Linguagem de programação estruturadas. <b>Universidade Federal o Rio Grande do Norte</b>. Disponivel em: 
                             &lt<a href="http://www.ppgsc.ufrn.br/~rogerio/material_auxiliar/CLP20122_Linguagens_Imperativas.pdf">http://www.ppgsc.ufrn.br/~rogerio/material_auxiliar/CLP20122_Linguagens_Imperativas.pdf</a>&gt. Acesso em: 14 Outubro 2021.   
                     </li>
+                    <li>
+                        PROGRAMAÇÃO Imperativa. <b>Wikipedia</b>, 2011. Disponivel em:
+                        &lt<a href="https://pt.wikipedia.org/wiki/Programa%C3%A7%C3%A3o_imperativa">https://pt.wikipedia.org/wiki/Programa%C3%A7%C3%A3o_imperativa</a>&gt. Acesso em: 14 Outubro 2021.
+                    </li>
+                    <li> OMERO. Introdução à Programação Estruturada. <b>DEVMEDIA</b>, 2012. Disponivel em:
+                        &lt<a href="https://www.devmedia.com.br/introducao-a-programacao-estruturada/24951">https://www.devmedia.com.br/introducao-a-programacao-estruturada/24951</a>&gt. Acesso em: 14 Outubro 2021.
+                    </li>
+                    <li>PROGRAMAÇÃO Estruturada. <b>Wikipedia</b>, 2020. Disponivel em:
+                        &lt<a href="https://pt.wikipedia.org/wiki/Programa%C3%A7%C3%A3o_estruturada">https://pt.wikipedia.org/wiki/Programa%C3%A7%C3%A3o_estruturada</a>&gt. Acesso em: 14 Outubro 2021.
+                    </li>
+                    <li>OBJETOS e Classes em Java. <b>java T point</b>. Disponivel em: 
+                        &lt<a href="https://www.javatpoint.com/pt/objetos-e-classes-em-java">https://www.javatpoint.com/pt/objetos-e-classes-em-java</a>&gt. Acesso em: 14 Outubro 2021.
+                    </li>
                 </ul>
             </div>
     </main>
@@ -189,9 +202,9 @@
         </div>
 
         <nav>
-            <ul>
-                <li><a href="../sobre.html">Sobre</a></li>
-                <li><a href="../contato.html">Contato</a></li>
+            <ul class="painel-navegacao">
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
                 <li class="not"><input type="text" name="" placeholder="Pesquise..."><i class="fa fa-search"></i>
                 </li>
             </ul>
