adicionado compilador em C e C++

--- a/ide/ui/ide.html
+++ b/ide/ui/ide.html
@@ -20,10 +20,10 @@
         Select Language:
         &nbsp; &nbsp;
         <select id="languages" class="languages" onchange="changeLanguage()">
-            <option value="c" selected> C </option>
+            <option value="c"> C </option>
             <option value="cpp"> C++ </option>
             <option value="php"> PHP </option>
-            <option value="py"> Python </option>
+            <option value="py" selected> Python </option>
             <option value="js"> Node JS </option>
         </select>
     </div>
